# type_safe

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
example/: CMakeLists.txt  type_cast.cpp
include/type_safe/: floating_point.hpp  integer.hpp  math.hpp  narrow_cast.hpp
include/type_safe/detail/: assert.hpp  force_inline.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
